--- a/Task-3/currency/src/main/resources/application.properties
+++ b/Task-3/currency/src/main/resources/application.properties
@@ -1,7 +1,15 @@
 server.port=8080
 
-spring.application.name=currency
+spring.application.name=weather
 eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER:http://localhost:8761/eureka}
 eureka.instance.preferIpAddress=true
 
-spring.datasource.url=jdbc:h2:mem:db
+weather.api.key=24f63dbef7f64938b31102042201912
+
+spring.datasource.url=jdbc:postgresql://db:5432/
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
