--- a/Task-3/weather/pom.xml
+++ b/Task-3/weather/pom.xml
@@ -21,6 +21,10 @@
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
