--- a/Task-3/weather/src/main/resources/application.properties
+++ b/Task-3/weather/src/main/resources/application.properties
@@ -5,4 +5,11 @@ eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER:http://localhost:8761/eurek
 eureka.instance.preferIpAddress=true
 
 weather.api.key=24f63dbef7f64938b31102042201912
-spring.datasource.url=jdbc:h2:mem:db
+
+spring.datasource.url=jdbc:postgresql://db:5432/
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
