--- a/Task-3/currency/src/main/resources/application.properties
+++ b/Task-3/currency/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 server.port=8080
 
-spring.application.name=weather
+spring.application.name=currency
 eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER:http://localhost:8761/eureka}
 eureka.instance.preferIpAddress=true
-
-weather.api.key=24f63dbef7f64938b31102042201912
 
 spring.datasource.url=jdbc:postgresql://db:5432/
 spring.datasource.driverClassName=org.postgresql.Driver
