--- a/Task-3/currency/src/main/resources/application.properties
+++ b/Task-3/currency/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=currency
 eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER:http://localhost:8761/eureka}
 eureka.instance.preferIpAddress=true
 
-spring.datasource.url=jdbc:postgresql://db:5432/
+spring.datasource.url=${POSTGRES_SERVER}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
