--- a/Task-3/weather/src/main/resources/application.properties
+++ b/Task-3/weather/src/main/resources/application.properties
@@ -6,7 +6,7 @@ eureka.instance.preferIpAddress=true
 
 weather.api.key=24f63dbef7f64938b31102042201912
 
-spring.datasource.url=jdbc:postgresql://db:5432/
+spring.datasource.url=${POSTGRES_SERVER}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
