--- a/Task-3/currency/src/test/resources/application.properties
+++ b/Task-3/currency/src/test/resources/application.properties
@@ -1,3 +1,10 @@
 eureka.client.enabled=false
 
+spring.flyway.enabled=false
+
 spring.datasource.url=jdbc:h2:mem:db
+spring.datasource.hikari.schema=PUBLIC
+
+spring.jpa.database=H2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
