--- a/Task-3/weather/src/test/resources/application.properties
+++ b/Task-3/weather/src/test/resources/application.properties
@@ -1,4 +1,12 @@
 weather.api.key=24f63dbef7f64938b31102042201912
 
 eureka.client.enabled=false
+
+spring.flyway.enabled=false
+
 spring.datasource.url=jdbc:h2:mem:db
+spring.datasource.hikari.schema=PUBLIC
+
+spring.jpa.database=H2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
