Fix flyway migrations

--- a/Task-3/weather/src/main/resources/application.properties
+++ b/Task-3/weather/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.url=${POSTGRES_SERVER}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.datasource.hikari.schema=weather_schema
+spring.datasource.hikari.schema=weather
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database=postgresql
@@ -18,5 +18,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 
 spring.flyway.user=postgres
 spring.flyway.password=postgres
-spring.flyway.url=jdbc:postgresql://194.87.111.112/postgres
-spring.flyway.schemas=weather_schema
+spring.flyway.url=jdbc:postgresql://db:5432/postgres
+spring.flyway.schemas=weather
