--- a/Task-3/currency/src/main/resources/application.properties
+++ b/Task-3/currency/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=${POSTGRES_SERVER}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.datasource.hikari.schema=currency_schema
+spring.datasource.hikari.schema=currency
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database=postgresql
@@ -16,7 +16,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 
 spring.flyway.user=postgres
 spring.flyway.password=postgres
-spring.flyway.url=jdbc:postgresql://194.87.111.112/postgres
-spring.flyway.schemas=currency_schema
+spring.flyway.url=jdbc:postgresql://db:5432/postgres
+spring.flyway.schemas=currency
 
 debug=true
